# vcpkg-ports

./: CMakeLists.txt  README.md
cmake/: k1eeConfig.cmake  k1eeConfig.in
include/: CMakeLists.txt
include/k1ee/: file.h
src/: CMakeLists.txt  file.cpp
test/: CMakeLists.txt  test_file.cpp
